src/snapshots/merkle_search_tree__tree__tests__split_page_all_gte_nodes_with_lt_pointer.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 1|<0>·|0|<high_page>·"]
	page_1:high_page -> page_2:head [fontcolor=red color=red label="high page"];

	page_2 [shape=record, label="<head>Level 0|<1>·|1"]

}

