src/snapshots/merkle_search_tree__tree__tests__split_page_all_lt_nodes_with_high_page.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	page_1:1 -> page_2:head;
	page_2 [shape=record, label="<head>Level 0|<0>·|0"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 1|<1>·|1"]

}

