src/snapshots/merkle_search_tree__tree__tests__two_in_order.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 0|<A>·|A|<B>·|B"]

}

