src/snapshots/merkle_search_tree__tree__tests__update.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 6|<00011111111111111111111111111111>·|00011111111111111111111111111111"]

}

